Setup cron job & upload to Vercel
