# internal/routes/game_routes.go
@@ -12,7 +12,10 @@ func GameRoutes(group *gin.Engine) {
 	gameHandler := game.NewGameHandler(gameRepo)
 
 	gameGroup := group.Group("/game")
-	privateGameGroup := gameGroup.Use(middleware.AuthMiddleware())
+	privateGameGroup := group.Group("/game")
+	privateGameGroup.Use(middleware.AuthMiddleware())
+	cronJobGroup := group.Group("/game")
+	cronJobGroup.Use(middleware.CronJobAuthMiddleware())
 
 	// --- PRIVATE ROUTES ---
 	privateGameGroup.POST("/create", func(c *gin.Context) {
@@ -24,9 +27,17 @@ func GameRoutes(group *gin.Engine) {
 	privateGameGroup.POST("/move", func(c *gin.Context) {
 		gameHandler.CreateMove(c)
 	})
+	privateGameGroup.POST("/:gameName/reset", func(c *gin.Context) {
+		gameHandler.ResetGame(c)
+	})
 
 	// --- PUBLIC ROUTES ---
 	gameGroup.GET("/all/count", func(c *gin.Context) {
 		gameHandler.GetAllGamesCount(c)
+	})
+
+	// --- CRON JOB ROUTES ---
+	cronJobGroup.POST("/all/clear", func(c *gin.Context) {
+		gameHandler.ClearAllGames(c) // "0 5 */2 * *" => 05:00 AM, every 2 days
 	})
 }
